plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '6.25.0'
	id 'checkstyle'
}

group = 'com.eshop'
version = '0.0.1-SNAPSHOT'
description = 'Ecommerse project using Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
    }
    scripts {
        java {
            srcDirs = ['scripts']
            compileClasspath += sourceSets.main.output + configurations.compileClasspath
            runtimeClasspath += sourceSets.main.output + configurations.runtimeClasspath
        }
    }
}

repositories {
	mavenCentral()
	maven { url = 'https://jitpack.io' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-json'
	implementation 'org.springframework.boot:spring-boot-autoconfigure'

	// ═══════════════════════════════════════════════════════════
	// CLOUDFLARE R2 (S3 ASYNC) - Enterprise Core
	// ═══════════════════════════════════════════════════════════
	implementation platform('software.amazon.awssdk:bom:2.25.40')
	implementation 'software.amazon.awssdk:s3'
	implementation 'software.amazon.awssdk:netty-nio-client:2.25.40'
	implementation 'software.amazon.awssdk:auth'
	implementation 'software.amazon.awssdk:regions'
	
	// Caching - Redis for distributed caching (primary) + Caffeine for local fallback
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	// Lettuce client (version by Spring Boot BOM) and connection pooling
	implementation 'io.lettuce:lettuce-core'
	implementation 'org.apache.commons:commons-pool2:2.12.0'

	// Testcontainers for integration tests (use stable compatible version)
	testImplementation 'org.testcontainers:junit-jupiter:1.17.6'
	testImplementation 'org.testcontainers:testcontainers:1.17.6'
	testImplementation 'org.testcontainers:postgresql:1.17.6'
	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
	
	// Ehcache for JCache (JSR-107) support
	//implementation 'org.ehcache:ehcache:3.10.8'
	//implementation 'javax.cache:cache-api:1.1.1'
	//implementation 'org.hibernate:hibernate-jcache:6.4.4.Final'
	
	// OpenAPI/Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.0'
	
	// Environment Variables
	implementation 'me.paulschwarz:spring-dotenv:4.0.0'

	// Hibernate Validator for @URL and advanced validation
	implementation 'org.hibernate.validator:hibernate-validator'
	
	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
	
	// Flyway for database migrations (Spring Boot 4 compatible)
	implementation 'org.flywaydb:flyway-core:10.10.0'
	implementation 'org.flywaydb:flyway-database-postgresql:10.10.0'
	
	// Resilience4j - Rate limiting, Circuit breaker, Bulkhead, Retry
	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
	implementation 'io.github.resilience4j:resilience4j-ratelimiter:2.2.0'
	implementation 'io.github.resilience4j:resilience4j-circuitbreaker:2.2.0'
	implementation 'io.github.resilience4j:resilience4j-bulkhead:2.2.0'
	implementation 'io.github.resilience4j:resilience4j-retry:2.2.0'
	implementation 'io.github.resilience4j:resilience4j-timelimiter:2.2.0'
	implementation 'io.github.resilience4j:resilience4j-micrometer:2.2.0'
	
	// Monitoring/metrics
	implementation 'io.micrometer:micrometer-core:1.16.0'
	implementation 'io.micrometer:micrometer-registry-prometheus:1.16.0'
	
	// Distributed Tracing
	implementation 'io.micrometer:micrometer-tracing-bridge-brave:1.3.5'
	implementation 'io.zipkin.reporter2:zipkin-reporter-brave:3.4.0'
	
	// ═══════════════════════════════════════════════════════════
	// Lombok & MapStruct - ORDER MATTERS!
	// ═══════════════════════════════════════════════════════════
	compileOnly 'org.projectlombok:lombok:1.18.42'
	annotationProcessor 'org.projectlombok:lombok:1.18.42'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	implementation 'org.mapstruct:mapstruct:1.6.3'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

	// Database
	runtimeOnly 'org.postgresql:postgresql'

	// Generate metadata for ConfigurationProperties
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	compileOnly 'org.springframework.boot:spring-boot-configuration-processor'
	
	// Payment Processing
	implementation 'com.stripe:stripe-java:24.18.0'
	implementation 'com.paypal.sdk:checkout-sdk:2.0.0'
	implementation 'com.razorpay:razorpay-java:1.4.6'

	// Spring Retry
	implementation 'org.springframework.retry:spring-retry:2.0.5'
	
	// HTTP client for REST API integrations
	implementation 'org.apache.httpcomponents:httpclient:4.5.14'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.0'
	
	// Image processing
	implementation 'net.coobird:thumbnailator:0.4.19'
	
	implementation 'commons-io:commons-io:2.15.1'

	// Currency conversion and money handling
	implementation 'org.javamoney:moneta:1.4.2'
	
	// HTML Sanitization (XSS prevention)
	implementation 'org.jsoup:jsoup:1.18.1'
	
	// URL Slug generation for SEO-friendly category URLs
	implementation 'com.github.slugify:slugify:3.0.2'
	
        // Apache Tika for file type detection
        implementation 'org.apache.tika:tika-core:2.9.1'
        
	

	implementation 'javax.money:money-api:1.1'
	
	// Scheduled tasks enhancement
	implementation 'net.javacrumbs.shedlock:shedlock-spring:5.10.0'
	implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:5.10.0'
	
	// XML sitemap generation - Use GitHub repo directly
	implementation 'com.github.dfabulich:sitemapgen4j:1.1.2'
	
	// Mail support
	implementation 'org.springframework.boot:spring-boot-starter-mail'


	// GDPR data export (Excel/PDF)
	implementation 'org.apache.poi:poi-ooxml:5.2.5'
	implementation 'com.itextpdf:itext7-core:8.0.2'

	// (Removed duplicate older resilience4j artifacts - using 2.2.0 set above)
	implementation 'jakarta.persistence:jakarta.persistence-api:3.2.0'
	
	// Testing dependencies
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-cache-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-oauth2-resource-server-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
		testRuntimeOnly 'com.h2database:h2'

	// Enable Lombok annotation processing for test sources
	testCompileOnly 'org.projectlombok:lombok:1.18.42'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.42'

	// Ensure MapStruct annotation processing in tests (if tests use generated mappers)
	testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
	testAnnotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

	// Keycloak admin client and RESTEasy providers
	implementation 'org.keycloak:keycloak-admin-client:23.0.3'
	implementation 'org.jboss.resteasy:resteasy-client:6.2.5.Final'
	implementation 'org.jboss.resteasy:resteasy-jackson2-provider:6.2.5.Final'

	// Architecture Testing
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.2.1'
}
// Exclude possible JCache/Ehcache providers from all configurations to prevent multiple providers
configurations.all {
	exclude group: 'org.ehcache', module: 'ehcache'
	exclude group: 'javax.cache', module: 'cache-api'
	exclude group: 'org.hibernate', module: 'hibernate-jcache'
	// Ensure Jedis is not pulled accidentally; prefer Lettuce
	exclude group: 'redis.clients', module: 'jedis'
}

tasks.named('test') {
	useJUnitPlatform()
	maxHeapSize = "2048m"
}

// ≡ƒôƒ Load Environment Variables from .env for bootRun and test
def loadEnvVariables(task) {
    if (file(".env").exists()) {
        file(".env").readLines().each { line ->
            if (line.trim() && !line.startsWith("#") && line.contains("=")) {
                int index = line.indexOf("=")
                String key = line.substring(0, index).trim()
                String value = ""
                if (index < line.length() - 1) {
                    value = line.substring(index + 1).trim()
                }
                
                // Remove quotes if present
                if (value.startsWith("\"") && value.endsWith("\"")) {
                    value = value.substring(1, value.length() - 1)
                } else if (value.startsWith("'") && value.endsWith("'")) {
                    value = value.substring(1, value.length() - 1)
                }
                
                task.systemProperty key, value
                task.environment key, value
            }
        }
    }
}

tasks.named('bootRun').configure {
    loadEnvVariables(it)
    println "Γ£à Loaded environment variables from .env for bootRun"
}

tasks.named('test').configure {
    loadEnvVariables(it)
    // println "Γ£à Loaded environment variables from .env for test"
}

// Prevent BootJar failure on duplicate META-INF entries (e.g. spring-configuration-metadata.json)
// Prevent duplicate META-INF entries (Gradle 9+ strictness)
tasks.withType(org.gradle.api.tasks.bundling.Jar).configureEach {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(org.springframework.boot.gradle.tasks.bundling.BootJar).configureEach {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// ─────────────────────────────────────────────
// CODE QUALITY & FORMATTING
// ─────────────────────────────────────────────

spotless {
    java {
        target 'src/main/java/**/*.java', 'src/test/java/**/*.java'
        googleJavaFormat('1.19.2').aosp().reflowLongStrings()
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
    format 'misc', {
        target '*.gradle', '.gitignore'
        trimTrailingWhitespace()
        indentWithSpaces(4)
        endWithNewline()
    }
}

checkstyle {
    toolVersion = '10.12.5'
    configFile = file('config/checkstyle/checkstyle.xml')
    ignoreFailures = false
    showViolations = true
}

tasks.withType(Checkstyle).configureEach {
    reports {
        xml.required = true
        html.required = true
    }
}
